kubernets/yaml/ingress-test/myweb-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myweb-ingress
  namespace: default
spec:
  rules:
  - host: myweb.test
    http:
      paths:
      - backend:
          serviceName: myweb
          servicePort: 8080
